tests/fsharp/typecheck/sigs/neg125.bsl

neg125.fs(39,30,39,32): typecheck error FS0001: A unique overload for method 'convert_witness' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known return type: int32

Known type parameter: < BigInteger >

Candidates:
 - static member witnesses.convert_witness: x: bigint -> Complex
 - static member witnesses.convert_witness: x: bigint -> bigint
 - static member witnesses.convert_witness: x: bigint -> byte
 - static member witnesses.convert_witness: x: bigint -> decimal
 - static member witnesses.convert_witness: x: bigint -> float
 - static member witnesses.convert_witness: x: bigint -> float32
 - static member witnesses.convert_witness: x: bigint -> int
 - static member witnesses.convert_witness: x: bigint -> int16
 - static member witnesses.convert_witness: x: bigint -> int64
 - static member witnesses.convert_witness: x: bigint -> sbyte
 - static member witnesses.convert_witness: x: bigint -> uint16
 - static member witnesses.convert_witness: x: bigint -> uint32
 - static member witnesses.convert_witness: x: bigint -> uint64

neg125.fs(40,30,40,32): typecheck error FS0001: A unique overload for method 'convert_witness' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known return type: int64

Known type parameter: < BigInteger >

Candidates:
 - static member witnesses.convert_witness: x: bigint -> Complex
 - static member witnesses.convert_witness: x: bigint -> bigint
 - static member witnesses.convert_witness: x: bigint -> byte
 - static member witnesses.convert_witness: x: bigint -> decimal
 - static member witnesses.convert_witness: x: bigint -> float
 - static member witnesses.convert_witness: x: bigint -> float32
 - static member witnesses.convert_witness: x: bigint -> int
 - static member witnesses.convert_witness: x: bigint -> int16
 - static member witnesses.convert_witness: x: bigint -> int64
 - static member witnesses.convert_witness: x: bigint -> sbyte
 - static member witnesses.convert_witness: x: bigint -> uint16
 - static member witnesses.convert_witness: x: bigint -> uint32
 - static member witnesses.convert_witness: x: bigint -> uint64

neg125.fs(41,31,41,33): typecheck error FS0001: A unique overload for method 'convert_witness' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known return type: bigint

Known type parameter: < BigInteger >

Candidates:
 - static member witnesses.convert_witness: x: bigint -> Complex
 - static member witnesses.convert_witness: x: bigint -> bigint
 - static member witnesses.convert_witness: x: bigint -> byte
 - static member witnesses.convert_witness: x: bigint -> decimal
 - static member witnesses.convert_witness: x: bigint -> float
 - static member witnesses.convert_witness: x: bigint -> float32
 - static member witnesses.convert_witness: x: bigint -> int
 - static member witnesses.convert_witness: x: bigint -> int16
 - static member witnesses.convert_witness: x: bigint -> int64
 - static member witnesses.convert_witness: x: bigint -> sbyte
 - static member witnesses.convert_witness: x: bigint -> uint16
 - static member witnesses.convert_witness: x: bigint -> uint32
 - static member witnesses.convert_witness: x: bigint -> uint64

neg125.fs(42,30,42,32): typecheck error FS0001: A unique overload for method 'convert_witness' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known return type: float

Known type parameter: < BigInteger >

Candidates:
 - static member witnesses.convert_witness: x: bigint -> Complex
 - static member witnesses.convert_witness: x: bigint -> bigint
 - static member witnesses.convert_witness: x: bigint -> byte
 - static member witnesses.convert_witness: x: bigint -> decimal
 - static member witnesses.convert_witness: x: bigint -> float
 - static member witnesses.convert_witness: x: bigint -> float32
 - static member witnesses.convert_witness: x: bigint -> int
 - static member witnesses.convert_witness: x: bigint -> int16
 - static member witnesses.convert_witness: x: bigint -> int64
 - static member witnesses.convert_witness: x: bigint -> sbyte
 - static member witnesses.convert_witness: x: bigint -> uint16
 - static member witnesses.convert_witness: x: bigint -> uint32
 - static member witnesses.convert_witness: x: bigint -> uint64

neg125.fs(43,30,43,32): typecheck error FS0001: A unique overload for method 'convert_witness' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known return type: sbyte

Known type parameter: < BigInteger >

Candidates:
 - static member witnesses.convert_witness: x: bigint -> Complex
 - static member witnesses.convert_witness: x: bigint -> bigint
 - static member witnesses.convert_witness: x: bigint -> byte
 - static member witnesses.convert_witness: x: bigint -> decimal
 - static member witnesses.convert_witness: x: bigint -> float
 - static member witnesses.convert_witness: x: bigint -> float32
 - static member witnesses.convert_witness: x: bigint -> int
 - static member witnesses.convert_witness: x: bigint -> int16
 - static member witnesses.convert_witness: x: bigint -> int64
 - static member witnesses.convert_witness: x: bigint -> sbyte
 - static member witnesses.convert_witness: x: bigint -> uint16
 - static member witnesses.convert_witness: x: bigint -> uint32
 - static member witnesses.convert_witness: x: bigint -> uint64

neg125.fs(44,30,44,32): typecheck error FS0001: A unique overload for method 'convert_witness' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known return type: int16

Known type parameter: < BigInteger >

Candidates:
 - static member witnesses.convert_witness: x: bigint -> Complex
 - static member witnesses.convert_witness: x: bigint -> bigint
 - static member witnesses.convert_witness: x: bigint -> byte
 - static member witnesses.convert_witness: x: bigint -> decimal
 - static member witnesses.convert_witness: x: bigint -> float
 - static member witnesses.convert_witness: x: bigint -> float32
 - static member witnesses.convert_witness: x: bigint -> int
 - static member witnesses.convert_witness: x: bigint -> int16
 - static member witnesses.convert_witness: x: bigint -> int64
 - static member witnesses.convert_witness: x: bigint -> sbyte
 - static member witnesses.convert_witness: x: bigint -> uint16
 - static member witnesses.convert_witness: x: bigint -> uint32
 - static member witnesses.convert_witness: x: bigint -> uint64

neg125.fs(45,29,45,31): typecheck error FS0001: A unique overload for method 'convert_witness' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known return type: byte

Known type parameter: < BigInteger >

Candidates:
 - static member witnesses.convert_witness: x: bigint -> Complex
 - static member witnesses.convert_witness: x: bigint -> bigint
 - static member witnesses.convert_witness: x: bigint -> byte
 - static member witnesses.convert_witness: x: bigint -> decimal
 - static member witnesses.convert_witness: x: bigint -> float
 - static member witnesses.convert_witness: x: bigint -> float32
 - static member witnesses.convert_witness: x: bigint -> int
 - static member witnesses.convert_witness: x: bigint -> int16
 - static member witnesses.convert_witness: x: bigint -> int64
 - static member witnesses.convert_witness: x: bigint -> sbyte
 - static member witnesses.convert_witness: x: bigint -> uint16
 - static member witnesses.convert_witness: x: bigint -> uint32
 - static member witnesses.convert_witness: x: bigint -> uint64

neg125.fs(46,31,46,33): typecheck error FS0001: A unique overload for method 'convert_witness' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known return type: uint16

Known type parameter: < BigInteger >

Candidates:
 - static member witnesses.convert_witness: x: bigint -> Complex
 - static member witnesses.convert_witness: x: bigint -> bigint
 - static member witnesses.convert_witness: x: bigint -> byte
 - static member witnesses.convert_witness: x: bigint -> decimal
 - static member witnesses.convert_witness: x: bigint -> float
 - static member witnesses.convert_witness: x: bigint -> float32
 - static member witnesses.convert_witness: x: bigint -> int
 - static member witnesses.convert_witness: x: bigint -> int16
 - static member witnesses.convert_witness: x: bigint -> int64
 - static member witnesses.convert_witness: x: bigint -> sbyte
 - static member witnesses.convert_witness: x: bigint -> uint16
 - static member witnesses.convert_witness: x: bigint -> uint32
 - static member witnesses.convert_witness: x: bigint -> uint64

neg125.fs(47,31,47,33): typecheck error FS0001: A unique overload for method 'convert_witness' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known return type: uint32

Known type parameter: < BigInteger >

Candidates:
 - static member witnesses.convert_witness: x: bigint -> Complex
 - static member witnesses.convert_witness: x: bigint -> bigint
 - static member witnesses.convert_witness: x: bigint -> byte
 - static member witnesses.convert_witness: x: bigint -> decimal
 - static member witnesses.convert_witness: x: bigint -> float
 - static member witnesses.convert_witness: x: bigint -> float32
 - static member witnesses.convert_witness: x: bigint -> int
 - static member witnesses.convert_witness: x: bigint -> int16
 - static member witnesses.convert_witness: x: bigint -> int64
 - static member witnesses.convert_witness: x: bigint -> sbyte
 - static member witnesses.convert_witness: x: bigint -> uint16
 - static member witnesses.convert_witness: x: bigint -> uint32
 - static member witnesses.convert_witness: x: bigint -> uint64

neg125.fs(48,32,48,34): typecheck error FS0001: A unique overload for method 'convert_witness' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known return type: uint64

Known type parameter: < BigInteger >

Candidates:
 - static member witnesses.convert_witness: x: bigint -> Complex
 - static member witnesses.convert_witness: x: bigint -> bigint
 - static member witnesses.convert_witness: x: bigint -> byte
 - static member witnesses.convert_witness: x: bigint -> decimal
 - static member witnesses.convert_witness: x: bigint -> float
 - static member witnesses.convert_witness: x: bigint -> float32
 - static member witnesses.convert_witness: x: bigint -> int
 - static member witnesses.convert_witness: x: bigint -> int16
 - static member witnesses.convert_witness: x: bigint -> int64
 - static member witnesses.convert_witness: x: bigint -> sbyte
 - static member witnesses.convert_witness: x: bigint -> uint16
 - static member witnesses.convert_witness: x: bigint -> uint32
 - static member witnesses.convert_witness: x: bigint -> uint64

neg125.fs(49,33,49,35): typecheck error FS0001: A unique overload for method 'convert_witness' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known return type: float32

Known type parameter: < BigInteger >

Candidates:
 - static member witnesses.convert_witness: x: bigint -> Complex
 - static member witnesses.convert_witness: x: bigint -> bigint
 - static member witnesses.convert_witness: x: bigint -> byte
 - static member witnesses.convert_witness: x: bigint -> decimal
 - static member witnesses.convert_witness: x: bigint -> float
 - static member witnesses.convert_witness: x: bigint -> float32
 - static member witnesses.convert_witness: x: bigint -> int
 - static member witnesses.convert_witness: x: bigint -> int16
 - static member witnesses.convert_witness: x: bigint -> int64
 - static member witnesses.convert_witness: x: bigint -> sbyte
 - static member witnesses.convert_witness: x: bigint -> uint16
 - static member witnesses.convert_witness: x: bigint -> uint32
 - static member witnesses.convert_witness: x: bigint -> uint64

neg125.fs(50,33,50,35): typecheck error FS0001: A unique overload for method 'convert_witness' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known return type: decimal

Known type parameter: < BigInteger >

Candidates:
 - static member witnesses.convert_witness: x: bigint -> Complex
 - static member witnesses.convert_witness: x: bigint -> bigint
 - static member witnesses.convert_witness: x: bigint -> byte
 - static member witnesses.convert_witness: x: bigint -> decimal
 - static member witnesses.convert_witness: x: bigint -> float
 - static member witnesses.convert_witness: x: bigint -> float32
 - static member witnesses.convert_witness: x: bigint -> int
 - static member witnesses.convert_witness: x: bigint -> int16
 - static member witnesses.convert_witness: x: bigint -> int64
 - static member witnesses.convert_witness: x: bigint -> sbyte
 - static member witnesses.convert_witness: x: bigint -> uint16
 - static member witnesses.convert_witness: x: bigint -> uint32
 - static member witnesses.convert_witness: x: bigint -> uint64

neg125.fs(51,33,51,35): typecheck error FS0001: A unique overload for method 'convert_witness' could not be determined based on type information prior to this program point. A type annotation may be needed.

Known return type: Complex

Known type parameter: < BigInteger >

Candidates:
 - static member witnesses.convert_witness: x: bigint -> Complex
 - static member witnesses.convert_witness: x: bigint -> bigint
 - static member witnesses.convert_witness: x: bigint -> byte
 - static member witnesses.convert_witness: x: bigint -> decimal
 - static member witnesses.convert_witness: x: bigint -> float
 - static member witnesses.convert_witness: x: bigint -> float32
 - static member witnesses.convert_witness: x: bigint -> int
 - static member witnesses.convert_witness: x: bigint -> int16
 - static member witnesses.convert_witness: x: bigint -> int64
 - static member witnesses.convert_witness: x: bigint -> sbyte
 - static member witnesses.convert_witness: x: bigint -> uint16
 - static member witnesses.convert_witness: x: bigint -> uint32
 - static member witnesses.convert_witness: x: bigint -> uint64
